# rita

./: Cargo.toml  README.md
.github/workflows/: rita.yml  rita_lab.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_tetrahedralization.rs  fuzz_triangulation.rs
rita/: Cargo.toml
rita/src/: lib.rs  node.rs  predicates.rs  tetrahedralization.rs  triangulation.rs  wasm.rs
rita/src/tetds/: half_tri_iterator.rs  hedge_iterator.rs  mod.rs  tet_data_structure.rs  tet_iterator.rs
rita/src/trids/: hedge_iterator.rs  mod.rs  tri_data_structure.rs  tri_iterator.rs
rita/src/utils/: convexity.rs  helper.rs  mod.rs  point_order.rs
rita_lab/: Cargo.toml  index.html
rita_lab/assets/: sw.js
rita_lab/src/: app.rs  main.rs  utils.rs
rita_lab/src/panels/: top_panel.rs
rita_lab/src/panels/tabs/: tab_handler.rs
rita_lab/src/panels/tabs/debug/: central_panel.rs  side_panel.rs
rita_lab/src/panels/tabs/lab/: central_panel.rs  side_panel.rs
rita_lab/src/types/: app_settings.rs  colors.rs  file_handler.rs  metrics.rs  mod.rs  plot_settings.rs  tab.rs  triangulation.rs  vertex2.rs
rita_test_utils/: Cargo.toml
rita_test_utils/src/: lib.rs
src/: lib.rs  node.rs  tetrahedralization.rs  triangulation.rs
src/tetds/: half_tri_iterator.rs  hedge_iterator.rs  tet_data_structure.rs  tet_iterator.rs
src/trids/: hedge_iterator.rs  mod.rs  tri_data_structure.rs  tri_iterator.rs
src/utils/: convexity.rs  point_order.rs  types.rs
