[package]
name = "rita"
description = "Randomized Incremental Triangulation Algorithms"
keywords = [
    "computer-graphics",
    "triangulations",
    "delaunay",
    "geometry",
    "math",
]
version = "0.1.4"
repository = "https://github.com/glennDittmann/rita"
authors = ["Glenn Dittmann <glenn.dittmann@posteo.de>"]
edition = "2021"
# rust-version = "1.72.1"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
geo = "0.29.3"
geogram_predicates = "0.2.1"
log = "0.4.27"
nalgebra = "0.33.2"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10"

[dev-dependencies]
approx_eq = "0.1.8"
env_logger = "0.11.8"
