[package]
name = "rita-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# run this with cargo fuzz
# Some good args to start with: `-O -a --strip-dead-code -- -max_len=5000`

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rita]
path = "../rita"
features = ["arbitrary"]

[[bin]]
name = "fuzz_triangulation"
path = "fuzz_targets/fuzz_triangulation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tetrahedralization"
path = "fuzz_targets/fuzz_tetrahedralization.rs"
test = false
doc = false
bench = false
