[package]
name = "rita"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.0"

description = "2D and 3D Randomized Incremental Triangulation Algorithms"
keywords = [
    "computer-graphics",
    "triangulations",
    "delaunay",
    "geometry",
    "math",
]
categories = ["algorithms", "graphics"]
repository = "https://github.com/glennDittmann/rita"
authors = ["Glenn Dittmann <glenn.dittmann@posteo.de>"]
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
geogram_predicates = { version = "0.2.1", optional = true }
log = { version = "0.4", optional = true }
nalgebra = { version = "0.33", features = [
    "libm",
    "macros",
    "matrixmultiply",
], default-features = false }
rayon = "1.10"
robust = { version = "1.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }

[dev-dependencies]
rita_test_utils = { path = "../rita_test_utils" }

[features]
default = ["std", "geogram"]
std = ["anyhow/std", "nalgebra/std"]
geogram = ["dep:geogram_predicates"]
# wasm: use pure-Rust robust predicates + JS API. For wasm32: --no-default-features --features "std,wasm"
wasm = ["dep:robust", "dep:wasm-bindgen", "dep:js-sys"]
timing = ["std"]
logging = ["dep:log"]
log_timing = ["logging", "timing"]
