[package]
name = "rita_lab"
version = "0.1.1"
edition = "2021"
rust-version = "1.75.0"

description = "A tool for 2D triangulations and related algorithms."
keywords = [
    "computer-graphics",
    "triangulations",
    "visualization",
    "delaunay",
    "geometry",
]
repository = "https://github.com/glennDittmann/rita"
authors = ["Glenn Dittmann <glenn.dittmann@posteo.de>"]
license = "MIT"

[dependencies]
rita = "0.1.7"
vertex_clustering = "0.1.1"
csv = "1.2.2"
rfd = "0.15.3"

log = "0.4"
rita_test_utils = { version = "0.1", path = "../rita_test_utils" }

egui = "0.31.1"
egui_plot = { version = "0.32.1", features = ["serde"] }
eframe = { version = "0.31.1", features = [
    "accesskit",     # Make egui comptaible with screen readers.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
futures = "0.3.31"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


#[profile.release]
#opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
#[profile.dev.package."*"]
#opt-level = 2
